# apexpop

./: .gitignore  AGENTS.md  ANTI-HALLUCINATION.md  APEX-STATUS.md  APEX_SCIENCE_FUSION.md  APEX_SELF_IMPROVEMENT.md  APEX_UNIVERSAL_FORMULA_v2.md  APEX_V10_FORMULA_ANALYSIS.md  APEX_V2_ARCHITECTURE.md  APEX_V2_DEEP_STUDY.md  Agent vs 自动化成本与准确率分析.md  COEVOLUTION-DESIGN.md  EVOLUTION-GRAPH.md  EVOLUTION.md  EVOLUTION_213542_LOG.md  EVOLUTION_LOG.md  EXPLORATION-ENGINE.md  FEISHU.md  FOUR-ENGINES.md  GENE-FUSION.md  GROUP_POLICY.md  HEARTBEAT.md  HERMES-ANALYSIS.md  IDENTITY.md  INDEPENDENT-AUDIT.md  MEMORY.md  MUTATION-ENGINE.md  Makefile  OmniTask_下一代人机协作平台_技术架构.md  OpenClaw保姆级教程.md  OpenClaw智能客服方案.md  PROTOCOL.md  README.md  SECURITY-AUDIT.md  SECURITY-BOUNDARY.md  SECURITY-INDEX.md  SOUL.md  SUPERCLAW-VISION.md  TOOLS.md  USER.md  (+16 more)
core-dna/: ARCHITECTURE.md  TEST_REPORT.md  absolute-zero.h  any_search.py  auto-acquire.py  auto-decision.c  auto-decision.h  blame.h  c-core  c-core-llm-bridge.py  c-core-pipe  cli.py  daemon.pid  daemon.py  decision-cache.h  digital_human.py  dual-llm.h  engine.rs  evolution-dispatcher.py  evolution-metrics.h  evolution-validator.py  gene-registry.py  gene_sharing.py  genes.json  genome.rs  genome_public.bak  genome_scores.jsonl  github_search.py  glue-no-llm.py  glue.py  hot-swap.py  hybrid-llm.py  longcat-evaluator.py  longcat-worker.py  main.c  main_pipe.c  mcp-server.py  mcp-server.rs  metacognition.h  mimoclaw.py  (+15 more)
memory/: 2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-29.md  2026-04-09.md  2026-04-28.md  2026-05-06.md  (+139 more)
(+71 files in other folders)
